where-is-waldo/src/index.css
body {
  margin: 0;
  width: 100%;
  height: auto;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}


.backgroundDiv {
  display: grid;
  position: relative;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
}

.backgroundDiv>img {
  grid-area: auto;
  position: relative;
  width: 100%;
  height: 100%;
  grid-column: 1;
  grid-row: 1;
}


.selectionArea {
  display: grid;
  grid-column: 1;
  grid-row: 1;
  position: relative;
  height: fit-content;
  width: fit-content;
  z-index: 1;
  border: 0px;
}

#charSelectionMenu, #charSelectionForm {
  width:inherit;
}

.clickLayer {
  display: flex;
  border: 3px solid blue;
  width: 100%;
  min-height: inherit;
  z-index: 2;
}

.navbar {
  position: sticky;
  top: 0;
  display: flex;
  justify-content: space-between;
  min-height: 100px;
  background-color: red;
  z-index: 4;
}

.navbarPokemon {
  height: 100px;
  width: auto;
}

.navbarPokemon:hover {
  height: 120px;
  width: auto;
}

.homePage {
  width: 100vw;
  height: 100vh;
}

.homePageBody {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgb(255, 255, 255);
  height: calc(100vh - 80px);
  width: auto;
}

.homePageGrid {
  display: grid;
  grid-template-columns: repeat(3, 25%);
  grid-template-rows: repeat(1, min-content);
  column-gap: 5%;
  justify-content: center;
  height: 100%;
  margin-top: 10px;
}

.homePageImage {
  width: auto;
  height: 50%;
  max-height: 342px;
  border-radius: 10%;
}

.homePageCharacter {
  height: 40px;
  width: auto;
}

.homePageCharacterDiv{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.homePageLogo {
  height: 80px;
  width: auto;
}

.homePageHeader {
  display: flex;
  align-items: center;
  justify-content: center;
  background: linear-gradient(to left, #EE2A24 50%, #00AEEF 50%);
  max-height: 80px;
}

.homePageHeader2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: linear-gradient(to left, #EE2A24 50%, #00AEEF 50%);
  max-height: 80px;
}

.headerLeft, .headerRight {
  width: 100px;
}

.homePageDifficulty {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size:xx-large;
  color: black;
  text-align: center;
}

.brighten {
  display: flex;
  align-items: center;
  justify-content: center;
}

.brighten img {
  -webkit-filter: brightness(70%);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;

  }

  .grid1:hover > .brighten>img {
    -webkit-filter: brightness(100%);
  }

  .grid2:hover > .brighten>img {
    -webkit-filter: brightness(100%);
  }
  
  .grid3:hover > .brighten>img {
    -webkit-filter: brightness(100%);
  }

  .homePageScoreboardDiv {
    display: flex;
    margin: 20px 0px;
    justify-content: space-evenly;
    align-items: center;
    width: 100vw;
  }

  .homePageScoreboardButtonOuter {
        height: 50%;
    width: 15%;
  }

  .homePageScoreboardButton {

    background-color: #EE2A24 ;
    color: white;
    height: 100%;
    width: 100%;
    border-radius: 10px;
    border: blue;
    font-size:x-large;
  }

  .homePageScoreboardButton:hover {
    background-color: #ec6661
  }

  .homePageLeaderboardText {
    color: #EE2A24;
  }

.soreboardGrid {
  display: grid;
  grid-template-columns: repeat(3, min-content);
  grid-template-rows: repeat(1, min-content);
  justify-content: center;
  margin-top: 10px;
  gap: 5%;
}

.scoreboardGridItem {
  height: 40vh;
  width: auto;
}


.scoreboardRendering {
  display: flex;
  justify-content: center;
}



.scoreboardButton {
  background-color: #EE2A24 ;
  color: white;
  height: 50%;
  width: 15%;
  border-radius: 10px;
  border: blue;
  font-size:x-large;
}

.scoreboardButton:hover {
  background-color: #ec6661
}

.scoreboardButtonDiv {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 25px 0px;
}

.grid1, .grid2, .grid3 {
  border:5px solid #ec6661;
}

.grid1:hover, .grid2:hover, .grid3:hover {
  border:5px solid #ac4646;
}

a {
  text-decoration: none;
}

.tableOutside {
  display: flex;
  justify-content: center;
  align-items: center;
}

table {

  background: #EE2A24;
  border-radius: 0.25em;
  border-collapse: collapse;
  margin: 1em;
  width: fit-content;
  max-width: 50%;
}
th {
  border-bottom: 1px solid #364043;
  color: #ffffff;
  font-size: 1.5em;
  font-weight: 600;
  padding: 0.5em 1em;
  text-align: left;
}
td {
  color: #fff;
  font-weight: 400;
  padding: 0.65em 1em;
}
.disabled td {
  color: #4F5F64;
}
tbody tr {
  transition: background 0.25s ease;
}
tbody tr:hover {
  background: #c42c26;
}

.headerRight {
  color: black;
}

